<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Seeks</string>
    <string name="search_label">Seeks</string>
    <string name="search_hint">Seeks search</string>
    <string name="widget_name">Seeks</string>
    <string name="use_https">Use https</string>
    <string name="use_https_desc">Not supported on all nodes</string>
    <string name="pref_title">Seeks settings</string>
    
    <string name="pref_author">Author</string>
    <string name="pref_author_desc">Widget by Mehdi ABAAKOUK &lt;sileht@sileht.net&gt;\nArtwork by bouteilledelait</string>
    <string name="pref_about">About</string>
    <string name="pref_about_desc">Application are under GPL and available at http://github.com/sileht/SeeksWidget</string>
    <string name="pref_about2">About Seeks Service</string>
    <string name="pref_about2_desc">Service is under AGPL\nMore information at http://seeks-project.info/</string>
<string name="pref_nodelist">Select a node</string>
<string name="settings_description">Search on you favorite seeks node</string>
<string name="show_snippets">Show snippet</string>
<string name="show_snippets_desc">Show snippet instead of seeks suggestions</string>
<string name="instant_suggest">Instant suggest</string>
<string name="instant_suggest_desc">Don\'t wait to suggest \'related querys\' or \'snippets\'</string>
<string name="pref_search">Start a search</string>
<string name="pref_search_desc">Start a search with seeks</string>

<string-array name="nodelist">
<item>www.seeks-project.info</item>
<item>www.seeks-project.info (exp)</item>
<item>www.seeks.fr</item>
<item>seeks.sileht.net</item>
<item>search.riquer.fr</item>
<item>ouahpiti.info</item>
<item>seeks.trankil.info</item>
<item>seeks.homecomputing.fr</item>
<item>search.c9h.de</item>
<item>seeks.jeydee.net</item>
</string-array>
<string-array name="nodelist_values">
<item>www.seeks-project.info/search.php</item>
<item>www.seeks-project.info/search_exp.php</item>
<item>www.seeks.fr</item>
<item>seeks.sileht.net/index.php</item>
<item>search.riquer.fr/index.php</item>
<item>ouahpiti.info/index.php</item>
<item>seeks.trankil.info</item>
<item>seeks.homecomputing.fr</item>
<item>search.c9h.de</item>
<item>seeks.jeydee.net/seeks.php/search</item>
</string-array>
</resources>
