<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<PreferenceCategory android:title="@string/pref_title" android:key="cat_title">

		<PreferenceScreen android:title="@string/pref_search" android:summary="@string/pref_search_desc" android:key="start_search">
			<intent android:action="android.intent.action.VIEW"  android:targetPackage="fr.seeks" android:targetClass="fr.seeks.Search" />
		</PreferenceScreen>
		<CheckBoxPreference android:key="show_snippets"
			android:title="@string/show_snippets" android:summary="@string/show_snippets_desc"></CheckBoxPreference>
		<CheckBoxPreference android:key="instant_suggest"
			android:title="@string/instant_suggest" android:summary="@string/instant_suggest_desc" android:defaultValue="true"></CheckBoxPreference>
			
		<ListPreference android:key="nodelist" android:entries="@array/nodelist"
			android:entryValues="@array/nodelist_values" android:title="@string/pref_nodelist"></ListPreference>
		<EditTextPreference android:key="custom_url" android:title="@string/pref_custom_url" android:defaultValue="http://my.domain/seeks/search.php"></EditTextPreference>
		<CheckBoxPreference android:key="use_https"
			android:title="@string/use_https" android:summary="@string/use_https_desc"></CheckBoxPreference>
			
		<Preference android:key="about" android:title="@string/pref_about"></Preference>

</PreferenceCategory>
</PreferenceScreen>        